# snack-crud-project

./: .gitignore  README.md  pyproject.toml
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks/static/css/: style.css
snacks/templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
snacks_crud_project/: settings.py
templates/: base.html  footer.html  navbar.html
