[tool.poetry]
name = "snacks_crud_project"
version = "0.1.0"
description = ""
authors = ["HamzaAhmad97 <h.radiahmad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
